--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           </div>
         </div>
       </div>
-      <p class="copyright">Copyright &copy; <a href="https://www.digitalwebdesign.tech/" target="_blank">digitalwebdesign.tech</a></p>
+      <p class="copyright">Copyright &copy; <a href="https://www.desarrollodigitalweb.tech/" target="_blank">desarrollodigitalweb.tech</a></p>
     </footer>
     <script src="/app.js"></script>
   </body>
